# mklabels

./: README.md  flake.nix  pyproject.toml
mklabels/: main.py  pango_cairo.py
styles/: smd_book.txt
